--- a/articles/asc-for-iot/TOC.yml
+++ b/articles/asc-for-iot/TOC.yml
@@ -5,6 +5,8 @@
   items:
     - name: ソリューションのアーキテクチャ
       href: architecture.md
+    - name: Azure RTOS のセキュリティ ソリューション
+      href: iot-security-azure-rtos.md
     - name: セキュリティ エージェント
       href: security-agent-architecture.md
     - name: Edge のセキュリティ モジュール
@@ -53,9 +55,9 @@
       items:
         - name: デプロイするエージェントを選択する
           href: how-to-deploy-agent.md
-        - name: 'C# ベースのセキュリティ エージェントを Windows デバイスにデプロイする'
+        - name: C# ベースのセキュリティ エージェントを Windows デバイスにデプロイする
           href: how-to-deploy-windows-cs.md
-        - name: 'C# ベースのセキュリティ エージェントを Linux デバイスにデプロイする'
+        - name: C# ベースのセキュリティ エージェントを Linux デバイスにデプロイする
           href: how-to-deploy-linux-cs.md
         - name: C ベースのセキュリティ エージェントを Linux デバイスにデプロイする
           href: how-to-deploy-linux-c.md
@@ -65,7 +67,7 @@
           href: troubleshoot-agent.md
         - name: ローカル構成 C
           href: azure-iot-security-local-configuration-c.md
-        - name: 'ローカル構成 C#'
+        - name: ローカル構成 C#
           href: azure-iot-security-local-configuration-csharp.md
     - name: Edge のセキュリティ モジュールをデプロイする
       href: how-to-deploy-edge.md
