--- a/articles/hpc-cache/toc.yml
+++ b/articles/hpc-cache/toc.yml
@@ -11,7 +11,7 @@
 - name: 操作方法ガイド
   items:
     - name: 前提条件
-      href: hpc-cache-prereqs.md
+      href: hpc-cache-prerequisites.md
     - name: キャッシュを作成する
       href: hpc-cache-create.md
     - name: ストレージを追加する
@@ -46,6 +46,8 @@
   items:
     - name: サポート チケットを開く
       href: hpc-cache-support-ticket.md
+    - name: Azure HPC Cache 向けに Azure CLI を設定する
+      href: az-cli-prerequisites.md
     - name: BLOB ストレージ アカウントのファイアウォール設定を回避する
       href: hpc-cache-blob-firewall-fix.md
     - name: NFS ストレージ ターゲットの作成のトラブルシューティング
