--- a/articles/virtual-machine-scale-sets/TOC.yml
+++ b/articles/virtual-machine-scale-sets/TOC.yml
@@ -5,7 +5,6 @@
     - name: 仮想マシン スケール セットとは
       href: overview.md
 - name: クイックスタート
-  expanded: true
   items:
     - name: Azure Portal で作成する
       href: quick-create-portal.md
@@ -21,6 +20,7 @@
         - name: Windows スケール セット
           displayName: 'ARM, resource manager'
           href: quick-create-template-windows.md
+  expanded: true
 - name: チュートリアル
   items:
     - name: 1 - スケール セットの作成/管理
@@ -102,65 +102,71 @@
       href: ../azure-resource-manager/management/overview.md
       maintainContext: true
     - name: リージョン
-      href: ../virtual-machines/windows/regions.md
+      href: ../virtual-machines/regions.md
     - name: 可用性とパフォーマンス
-      maintainContext: true
       items:
         - name: 可用性
-          href: availability.md
+          href: ../virtual-machines/availability.md?toc=%2fazure%2fvirtual-machine-scale-sets%2ftoc.json
         - name: コロケーション
           href: co-location.md
         - name: ネットワーク パフォーマンス
           href: ../virtual-network/virtual-network-optimize-network-bandwidth.md?toc=%2fazure%2fvirtual-machine-scale-sets%2fwindows%2ftoc.json
         - name: スケール セット内の障害ドメインを管理する
           href: virtual-machine-scale-sets-manage-fault-domains.md
+      maintainContext: true
     - name: イメージ
       href: shared-image-galleries.md
     - name: VM の種類とサイズ
       href: ../virtual-machines/windows/sizes.md
-      maintainContext: true
       items:
         - name: 汎用
-          href: ../virtual-machines/windows/sizes-general.md
+          href: ../virtual-machines/sizes-general.md
           maintainContext: true
           items:
             - name: 負荷の急増に対応できる B シリーズ
-              href: ../virtual-machines/windows/b-series-burstable.md
+              href: ../virtual-machines/sizes-b-series-burstable.md
               maintainContext: true
         - name: コンピューティング最適化
-          href: ../virtual-machines/windows/sizes-compute.md
+          href: ../virtual-machines/sizes-compute.md
           maintainContext: true
         - name: メモリ最適化
-          href: ../virtual-machines/windows/sizes-memory.md
+          href: ../virtual-machines/sizes-memory.md
           maintainContext: true
           items:
             - name: 制約付き vCPU
               href: ../virtual-machines/windows/constrained-vcpu.md
               maintainContext: true
         - name: ストレージ最適化
-          href: ../virtual-machines/windows/sizes-storage.md
+          href: ../virtual-machines/sizes-storage.md
           maintainContext: true
         - name: GPU 最適化
-          href: ../virtual-machines/windows/sizes-gpu.md
+          href: ../virtual-machines/sizes-gpu.md
           maintainContext: true
           items:
             - name: NVIDIA GPU ドライバーの設定
               href: ../virtual-machines/windows/n-series-driver-setup.md
               maintainContext: true
         - name: ハイ パフォーマンス コンピューティング
-          href: ../virtual-machines/windows/sizes-hpc.md
+          href: ../virtual-machines/sizes-hpc.md
+          maintainContext: true
+        - name: 一時ディスクを使用しない Azure VM
+          href: ../virtual-machines/azure-vms-no-temp-disk.md
+          maintainContext: true
+        - name: Azure VM のサイズの名前付け規則
+          href: ../virtual-machines/vm-naming-conventions.md
           maintainContext: true
         - name: Azure コンピューティング ユニット (ACU)
-          href: ../virtual-machines/windows/acu.md
+          href: ../virtual-machines/acu.md
           maintainContext: true
         - name: ベンチマーク スコア
           href: ../virtual-machines/windows/compute-benchmark-scores.md
           maintainContext: true
+      maintainContext: true
     - name: 動作保証済み Linux ディストリビューション
       href: ../virtual-machines/linux/endorsed-distros.md
       maintainContext: true
     - name: メンテナンスと更新
-      href: ../virtual-machines/windows/maintenance-and-updates.md
+      href: ../virtual-machines/maintenance-and-updates.md?bc=/azure/virtual-machines/windows/breadcrumb/toc.json&toc=/azure/virtual-machines/windows/toc.json
       maintainContext: true
     - name: オーケストレーション モード
       href: orchestration-modes.md
@@ -192,17 +198,19 @@
     - name: インフラストラクチャの自動化
       href: ../virtual-machines/windows/infrastructure-automation.md
       maintainContext: true
-    - name: Security
+    - name: セキュリティ
       items:
         - name: セキュリティとポリシー
           href: ../virtual-machines/windows/security-policy.md
         - name: Azure Disk Encryption
           href: disk-encryption-overview.md
+        - name: Azure セキュリティ ベースライン
+          href: security-baseline.md
         - name: 組み込みのセキュリティ制御
           href: virtual-machine-scale-sets-security-controls.md
       maintainContext: true
     - name: 監視
-      href: ../virtual-machines/windows/monitor.md
+      href: ../azure-monitor/insights/monitor-vm-azure.md
       maintainContext: true
     - name: デプロイに関する考慮事項
       items:
@@ -381,9 +389,7 @@
 - name: リファレンス
   items:
     - name: Azure PowerShell
-      href: /powershell/azure/overview
-    - name: Azure CLI
-      href: ../virtual-machines/azure-cli-arm-commands.md
+      href: /powershell/azure/
     - name: REST
       href: /rest/api/virtualmachinescalesets/
     - name: Azure テンプレート
