--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -210,6 +210,8 @@
           href: vpn-gateway-3rdparty-device-config-cisco-asa.md
     - name: 監視とアラート
       items:
+        - name: VPN Gateway メトリックを表示する
+          href: vpn-gateway-howto-view-virtual-network-gateway-metrics.md
         - name: メトリックに基づいたアラートの設定
           href: vpn-gateway-howto-setup-alerts-virtual-network-gateway-metric.md
         - name: リソース ログに基づいたアラートの設定
@@ -260,9 +262,9 @@
 - name: リファレンス
   items:
     - name: Azure PowerShell
-      href: '/powershell/module/az.network#vpn'
+      href: /powershell/module/az.network#vpn
     - name: Azure PowerShell (クラシック)
-      href: '/powershell/module/servicemanagement/azure/?view=azuresmps-4.0.0#azure'
+      href: /powershell/module/servicemanagement/azure.service/?view=azuresmps-4.0.0#azure
     - name: REST
       href: /rest/api/network/virtualnetworkgateways
     - name: REST (クラシック)
