--- a/articles/azure-arc/toc.yml
+++ b/articles/azure-arc/toc.yml
@@ -2,43 +2,45 @@
   href: index.yml
 - name: 概要
   items:
-    - name: Kubernetes 向け Arc について
+    - name: Arc 対応 Kubernetes について
       href: ./kubernetes/overview.md
-    - name: Azure Arc for servers について
+    - name: Azure Arc 対応サーバーについて
       href: ./servers/overview.md
 - name: サンプル
   items:
     - name: Azure Policy の組み込み
       items:
-        - name: Kubernetes 向け Arc
+        - name: Arc 対応 Kubernetes
           href: ./kubernetes/policy-samples.md
-        - name: Arc for servers
+        - name: Arc 対応サーバー
           href: ./servers/policy-samples.md
 - name: 操作方法ガイド
   items:
-    - name: Kubernetes 向け Arc
+    - name: Arc 対応 Kubernetes
       items:
-        - name: クラスターの操作
+        - name: Azure Arc への接続
           items:
             - name: クラスターの接続
               href: ./kubernetes/connect-cluster.md
-            - name: 接続されたクラスターに GitOps を使用する
+            - name: サービス プリンシパルのオンボード
+              href: ./kubernetes/create-onboarding-service-principal.md
+        - name: 管理する
+          items:
+            - name: GitOps を使用して構成をデプロイする
               href: ./kubernetes/use-gitops-connected-cluster.md
-            - name: Helm で GitOps を使用する
+            - name: GitOps を使用して Helm グラフをデプロイする
               href: ./kubernetes/use-gitops-with-helm.md
             - name: Azure Policy を使用して GitOps を適用する
               href: ./kubernetes/use-azure-policy.md
-            - name: コンテナーに対する Azure Monitor を利用した監視
-              href: ../azure-monitor/insights/container-insights-enable-arc-enabled-clusters.md
+            - name: Azure Monitor を使用してコンテナーを監視する
+              href: ../azure-monitor/insights/container-insights-enable-arc-enabled-clusters.md?toc=/azure/azure-arc/toc.json
             - name: Azure Policy を使用した受付制御ポリシー
-              href: ../governance/policy/concepts/policy-for-kubernetes.md?toc=/azure/azure-arc/kubernetes/toc.json
+              href: ../governance/policy/concepts/policy-for-kubernetes.md?toc=/azure/azure-arc/toc.json
             - name: IoT ワークロードをデプロイする
               href: ./kubernetes/deploy-azure-iot-edge-workloads.md
-            - name: サービス プリンシパルのオンボード
-              href: ./kubernetes/create-onboarding-service-principal.md
-            - name: トラブルシューティング
-              href: ./kubernetes/Troubleshooting.md
-    - name: Arc for servers
+        - name: トラブルシューティング
+          href: ./kubernetes/Troubleshooting.md
+    - name: Arc 対応サーバー
       items:
         - name: Azure Arc への接続
           items:
