--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -143,7 +143,7 @@
           href: platform/personal-data-mgmt.md
         - name: アプリケーション データの収集、保持、保存
           href: app/data-retention-privacy.md
-    - name: 警告
+    - name: アラート
       items:
         - name: 概要
           href: platform/alerts-overview.md
@@ -157,6 +157,11 @@
       href: visualizations.md
     - name: パートナー統合
       href: platform/partners.md
+    - name: セキュリティ
+      items:
+        - name: Azure Policy によるセキュリティ制御
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./platform/security-controls-policy.md
 - name: 操作方法ガイド
   items:
     - name: シナリオ
@@ -244,8 +249,6 @@
                       href: platform/diagnostics-extension-to-application-insights.md
                     - name: バージョン履歴
                       href: platform/diagnostics-extension-versions.md
-                    - name: JSON Lines リソース ログの形式
-                      href: platform/resource-logs-append-blobs.md
                     - name: トラブルシューティング
                       href: platform/diagnostics-extension-troubleshooting.md
                 - name: Linux
@@ -264,9 +267,9 @@
                 - name: Linux エージェント
                   href: platform/agent-linux.md
                 - name: Windows 用の VM 拡張機能
-                  href: ../virtual-machines/windows/extensions-oms.md?toc=/azure/azure-monitor/toc.json
+                  href: ../virtual-machines/extensions/oms-windows.md?toc=/azure/azure-monitor/toc.json
                 - name: Linux 用の VM 拡張機能
-                  href: ../virtual-machines/linux/extensions-oms.md?toc=/azure/azure-monitor/toc.json
+                  href: ../virtual-machines/extensions/oms-linux.md?toc=/azure/azure-monitor/toc.json
                 - name: Log Analytics ゲートウェイ
                   href: platform/gateway.md
                 - name: エージェント管理
@@ -430,7 +433,7 @@
         - name: カスタム メトリックによるスケーリング
           href: platform/autoscale-custom-metric.md
         - name: VM スケール セットのスケーリング
-          href: ../virtual-machine-scale-sets/virtual-machine-scale-sets-windows-autoscale.md?toc=/azure/azure-monitor/toc.json
+          href: ../virtual-machine-scale-sets/tutorial-autoscale-powershell.md?toc=/azure/azure-monitor/toc.json
         - name: Resource Manager テンプレートを使用した VM スケール セットのスケーリング
           href: platform/autoscale-virtual-machine-scale-sets.md
         - name: Webhook と電子メール通知の使用
@@ -446,7 +449,7 @@
             - name: 可用性
               href: app/monitor-web-app-availability.md
             - name: メトリック アラート
-              href: app/alerts.md
+              href: ./platform/alerts-log.md
         - name: メトリック アラート ルール
           items:
             - name: メトリック アラートの管理
@@ -474,19 +477,20 @@
             - name: アクティビティ ログ イベントのアラート
               href: platform/alerts-activity-log.md
             - name: 管理イベントをアクティビティ ログ アラートに移行する
-              href: platform/migrate-management-alerts.md
+              href: ./platform/activity-log-alerts.md
             - name: webhook スキーマ
               href: platform/activity-log-alerts-webhook.md
         - name: サービス正常性のアラート
           items:
             - name: 通知の表示
-              href: platform/service-notifications.md
+              href: ../service-health/service-notifications.md
             - name: 通知イベントでのアラートの構成
               href: platform/alerts-activity-log-service-notifications.md
         - name: 通知とアクション
           items:
             - name: アクション ルール (プレビュー)
               href: platform/alerts-action-rules.md
+              displayName: 'Azure CLI, az monitor action rule'
             - name: アクション グループの作成
               href: platform/action-groups.md
             - name: 共通アラート スキーマ
@@ -556,7 +560,7 @@
         - name: Application Insights の概要
           href: app/app-insights-overview.md
         - name: よく寄せられる質問
-          href: app/troubleshoot-faq.md
+          href: ./faq.md
         - name: コードベースの監視
           items:
             - name: ASP.NET Core
@@ -970,7 +974,11 @@
         - name: ログ クエリによるデータの分析
           href: insights/container-insights-log-search.md
         - name: アラート
-          href: insights/container-insights-alerts.md
+          items:
+            - name: ログの警告ルールを作成する
+              href: insights/container-insights-log-alerts.md
+            - name: メトリックの警告ルールを作成する
+              href: insights/container-insights-metric-alerts.md
         - name: エージェント管理
           href: insights/container-insights-manage-agent.md
         - name: Prometheus のメトリック スクレーピングを構成する
@@ -1016,6 +1024,7 @@
       items:
         - name: 概要
           href: insights/solutions.md
+          displayName: 'Azure CLI, az monitor log-analytics'
         - name: ターゲット ソリューション
           href: insights/solution-targeting.md
         - name: 使用可能なソリューション
@@ -1028,8 +1037,6 @@
               href: insights/capacity-performance.md
             - name: Docker および Windows コンテナーの監視
               href: insights/containers.md
-            - name: Key Vault Analytics
-              href: insights/azure-key-vault.md
             - name: ネットワーク
               items:
                 - name: ネットワーク分析
@@ -1173,7 +1180,7 @@
     - name: 用語の変更
       href: terminology.md
     - name: データ参照
-      href: 'https://docs.microsoft.com/azure/azure-monitor/reference/'
+      href: /azure/azure-monitor/reference/
     - name: サポートされるメトリック
       items:
         - name: プラットフォームのメトリック
@@ -1288,6 +1295,8 @@
         - name: BLOB ストレージのフォーマットの変更
           displayname: Diagnostic settings
           href: platform/resource-logs-blob-format.md
+        - name: Key Vault Analytics (非推奨)
+          href: insights/azure-key-vault-deprecated.md
 - name: リソース
   items:
     - name: Azure のロードマップ
