--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -16,7 +16,11 @@
       href: tutorial-access-private-cloud.md
     - name: 5 - プライベート クラウドのスケーリング
       href: tutorial-scale-private-cloud.md
-    - name: 6 - コンテンツ ライブラリの作成
+    - name: 6 - NSX-T ネットワーク セグメントの作成
+      href: tutorial-nsx-t-network-segment.md
+    - name: 7 - オンプレミスからプライベート クラウドへのピアリング
+      href: tutorial-expressroute-global-reach-private-cloud.md
+    - name: 8 - コンテンツ ライブラリを介した VM のデプロイ
       href: tutorial-deploy-vm-content-library.md
 - name: 概念
   items:
@@ -34,6 +38,8 @@
       href: concepts-upgrades.md
 - name: 操作方法ガイド
   items:
+    - name: AVS 移行評価
+      href: ../migrate/how-to-create-azure-vmware-solution-assessment.md?context=/azure/migrate/context/migrate-context.json
     - name: HCX の設定
       href: hybrid-cloud-extension-installation.md
     - name: DHCP の管理
