--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -123,8 +123,10 @@
           href: azure-stack-edge-contact-microsoft-support.md
         - name: モニター
           href: azure-stack-edge-monitor.md
-        - name: デバイスの返却または交換
+        - name: デバイスの返却
           href: azure-stack-edge-return-device.md
+        - name: デバイスの置換
+          href: azure-stack-edge-replace-device.md
     - name: リリース ノート
       items:
         - name: 2007 - 最新
@@ -137,6 +139,14 @@
           href: data-box-gateway-1905-release-notes.md
         - name: 一般公開 (GA)
           href: data-box-gateway-release-notes.md
+    - name: リファレンス
+      items:
+        - name: Azure PowerShell
+          href: 'https://docs.microsoft.com/powershell/module/az.stackedge/?view=azps-4.4.0#stack_edge'
+        - name: REST API
+          href: 'https://docs.microsoft.com/rest/api/databoxedgegateway'
+        - name: .NET SDK
+          href: 'https://docs.microsoft.com/dotnet/api/overview/azure/databoxedge/databoxgateway?view=azure-dotnet'
 - name: リソース
   items:
     - name: Azure Stack Edge C# モジュールのサンプル (.NET)
