--- a/articles/firewall-manager/index.yml
+++ b/articles/firewall-manager/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: vhorne
   ms.author: victorh
   ms.date: 10/10/2019
-  ms.openlocfilehash: bf7474f1519fbd94be3de8daa15a43775a6a6a0a
-  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
+  ms.openlocfilehash: 16db3ae780109aee0733aa401c03d6b258e2c5c0
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/30/2020
-  ms.locfileid: "85561424"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87079002"
 landingContent:
 - title: Azure Firewall Manager について
   linkLists:
@@ -41,7 +41,7 @@ landingContent:
     links:
     - text: セキュリティ パートナー プロバイダーのデプロイ
       url: deploy-trusted-security-partner.md
-- title: Azure クラウド ネットワークのセキュリティ保護
+- title: Azure クラウド ネットワークをセキュリティで保護する
   linkLists:
   - linkListType: tutorial
     links:
