--- a/articles/key-vault/certificates/toc.yml
+++ b/articles/key-vault/certificates/toc.yml
@@ -4,6 +4,8 @@
   items:
     - name: 証明書について
       href: about-certificates.md
+    - name: 証明書の更新について
+      href: overview-renew-certificate.md
 - name: クイックスタート
   expanded: true
   items:
@@ -42,6 +44,8 @@
   items:
     - name: Key Vault と DigiCert CA の統合
       href: how-to-integrate-certificate-authority.md
+    - name: トラブルシューティング - 証明書のインポート
+      href: import-cert-faqs.md
 - name: リファレンス
   items:
     - name: Azure PowerShell
@@ -53,7 +57,7 @@
     - name: Java
       href: /java/api/overview/azure/keyvault?view=azure-java-stable
     - name: Node.js
-      href: /javascript/api/overview/azure/key-vault?view=azure-node-latest
+      href: 'https://docs.microsoft.com/javascript/api/overview/azure/key-vault-index?view=azure-node-latest'
     - name: Python
       href: /python/api/overview/azure/keyvault-certificates-readme?view=azure-python
     - name: REST
