--- a/articles/key-vault/general/index.yml
+++ b/articles/key-vault/general/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: mbaldwin
   manager: rkarlin
   ms.date: 09/19/2019
-  ms.openlocfilehash: 5be853f9e1f9778eb767aa93497c546cb35fa0df
-  ms.sourcegitcommit: b80aafd2c71d7366838811e92bd234ddbab507b6
+  ms.openlocfilehash: f1e519c99bf55abb8a72ada83d59fa1e4c063998
+  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 04/16/2020
-  ms.locfileid: "81422406"
+  ms.lasthandoff: 07/23/2020
+  ms.locfileid: "87078896"
 landingContent:
 - title: Azure Key Vault について
   linkLists:
@@ -38,10 +38,10 @@ landingContent:
     links:
     - text: Web アプリケーションからの Key Vault
       url: tutorial-net-create-vault-azure-web-app.md
-    - text: Key Vault と Azure Windows 仮想マシン
-      url: tutorial-net-windows-virtual-machine.md
-    - text: Key Vault と Python - Windows
-      url: tutorial-python-windows-virtual-machine.md
+    - text: .NET の仮想マシンを使用する Key Vault
+      url: tutorial-net-virtual-machine.md
+    - text: Python の仮想マシンを使用する Key Vault
+      url: tutorial-python-virtual-machine.md
 - title: Security
   linkLists:
   - linkListType: overview
