--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -351,6 +351,8 @@
           items:
             - name: メトリックに基づいたアラートの作成
               href: howto-hyperscale-alert-on-metric.md
+            - name: Access データベース ログ
+              href: howto-hyperscale-logging.md
         - name: トラブルシューティング
           items:
             - name: 接続エラーのトラブルシューティング
