--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -53,8 +53,10 @@
       href: ../../mysql/security-baseline.md
     - name: Azure Database for MariaDB のセキュリティ ベースライン
       href: ../../mariadb/security-baseline.md
-    - name: Azure Database for PostgreSQL のセキュリティ ベースライン
+    - name: Azure Database for PostgreSQL - 単一サーバーのセキュリティ ベースライン
       href: ../../postgresql/security-baseline.md
+    - name: Azure Database for PostgreSQL - Hyperscale のセキュリティ ベースライン
+      href: ../../postgresql/postgresql-hyperscale-security-baseline.md
     - name: Azure Databricks のセキュリティ ベースライン
       href: ../../azure-databricks/security-baseline.md
     - name: Azure Functions のセキュリティ ベースライン
@@ -79,6 +81,8 @@
       href: ../../cosmos-db/security-baseline.md
     - name: カスタマー ロックボックスのセキュリティ ベースライン
       href: ../fundamentals/customer-lockbox-security-baseline.md
+    - name: Data Lake Analytics のセキュリティ ベースライン
+      href: ../../data-lake-analytics/security-baseline.md
     - name: Event Hubs のセキュリティ ベースライン
       href: ../../event-hubs/security-baseline.md
     - name: ExpressRoute のセキュリティ ベースライン
@@ -91,7 +95,15 @@
       href: ../../logic-apps/security-baseline.md
     - name: Network Watcher のセキュリティベースライン
       href: ../../network-watcher/security-baseline.md
+    - name: Service Fabric のベースライン
+      href: ../../service-fabric/security-baseline.md
     - name: Stream Analytics のベースライン
       href: ../../stream-analytics/security-baseline.md
     - name: Synapse Analytics のセキュリティ ベースライン
       href: ../../synapse-analytics/security-baseline.md
+    - name: Virtual Machine Scale Sets のセキュリティ ベースライン
+      href: ../../virtual-machine-scale-sets/security-baseline.md
+    - name: Virtual Machines Linux のセキュリティ ベースライン
+      href: ../../virtual-machines/linux/security-baseline.md
+    - name: Virtual Machines Windows のセキュリティ ベースライン
+      href: ../../virtual-machines/windows/security-baseline.md
