--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -280,6 +280,8 @@
           href: storage-blob-pageblob-overview.md
         - name: 静的な Web サイト
           href: storage-blob-static-website.md
+        - name: NFS 3.0 プロトコルのサポート
+          href: network-file-system-protocol-support.md
     - name: 方法
       items:
         - name: ストレージ アカウントの作成と管理
@@ -469,12 +471,12 @@
                   href: ../common/storage-use-azcopy-configure.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Azure Data Factory
               href: ../../data-factory/connector-azure-blob-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Linux 上でファイル システムとして BLOB ストレージをマウントする
+            - name: NFS を使用して Linux からストレージをマウントする
+              href: network-file-system-protocol-support-how-to.md
+            - name: blobfuse を使用して Linux からストレージをマウントする
               href: storage-how-to-mount-container-linux.md
             - name: データ移動ライブラリを使用してデータを転送する
               href: ../common/storage-use-data-movement-library.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: Storage の移行に関する FAQ
-              href: ../common/storage-migration-faq.md
         - name: BLOB を使用した開発
           items:
             - name: C++
@@ -662,6 +664,9 @@
               href: security-recommendations.md
             - name: アクセスの制御 (ディレクトリとファイル)
               href: data-lake-storage-access-control.md
+            - name: Azure Policy によるセキュリティ制御
+              displayName: 'regulatory, compliance, standards, domains'
+              href: ./security-controls-policy.md
         - name: 互換性
           items:
             - name: マルチプロトコル アクセス
