--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -46,6 +46,8 @@
           href: expand-existing-host-pool.md
         - name: PowerShell を使用してアプリ グループを管理する
           href: manage-app-groups-powershell.md
+    - name: ホスト プールを削除する
+      href: delete-host-pool.md
     - name: プロファイル コンテナーを作成する
       items:
         - name: VM ベースのファイル共有を使用する
@@ -72,6 +74,8 @@
           href: set-up-customize-master-image.md
         - name: マスター VHD イメージに Office をインストールする
           href: install-office-on-wvd-master-image.md
+    - name: セッション ホストを自動的にスケーリングする
+      href: set-up-scaling-script.md
     - name: フィードをカスタマイズする
       href: customize-feed-for-virtual-desktop-users.md
     - name: サービスの診断を使用する
@@ -108,6 +112,8 @@
       href: store-fslogix-profile.md
     - name: パートナー統合
       href: partners.md
+    - name: Windows Virtual Desktop に関する FAQ
+      href: faq.md
     - name: Windows 10 Enterprise マルチセッションに関する FAQ
       href: windows-10-multisession-faq.md
     - name: データの場所
