--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -38,6 +38,8 @@
           href: virtual-wan-configure-automation-providers.md
     - name: 価格の概念
       href: pricing-concepts.md
+    - name: 仮想ハブの NVA について
+      href: about-nva-hub.md
     - name: ルーティング
       items:
         - name: 仮想ハブのルーティングについて
@@ -60,6 +62,10 @@
               href: scenario-route-between-hubs-firewall.md
             - name: Azure Firewall - カスタム
               href: scenario-route-between-vnets-firewall.md
+    - name: 監視
+      items:
+        - name: Virtual WAN の Azure Monitor の Insights について (プレビュー)
+          href: azure-monitor-insights.md
     - name: サイト間
       items:
         - name: IPsec ポリシーについて
@@ -70,6 +76,8 @@
   items:
     - name: Virtual WAN SKU をアップグレードする
       href: upgrade-virtual-wan.md
+    - name: 仮想ハブで NVA を作成する (プレビュー)
+      href: How-to-nva-hub.md
     - name: ExpressRoute
       items:
         - name: ExpressRoute 接続を作成する
